--- a/index.html
+++ b/index.html
@@ -1,30 +1,181 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>Domain For Sale</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <!-- EVERY 5 Minutes REFRESH -->
+  <meta http-equiv="refresh" content="300">
+  <!-- DISABLE CACHE -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
+  <title>Realtime Corona Virus</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/grayscale.min.css" rel="stylesheet">
+
+  <!-- GDPR Cookie Box -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/jquery-eu-cookie-law-popup.css"/>
+  <script src="js/jquery-eu-cookie-law-popup.js"></script>
+  <!-- END GDPR Cookie Box -->
+
 </head>
-<body>
-<br>
-<div align="center">
-<img src="./images/logo_for_sale.jpg" heigth="30%" width="30%">
-</div>
-<h1 align="center"><p id="domain"></p> Domain For Sale</h1>
-<br>
-<h2>Make offer now!</h2>
-<p>Are you a newspaper or an active player on the breaking news?</p>
-<p>we are available to evaluate your offers!
-<a href="mailto:realtimecoronavirus@yahoo.com?subject=Domain Offer">Make Offer Here</a>
-</p>
-<script>
-  var x = document.domain;
-  document.getElementById("domain").innerHTML = x;
-</script>
+
+<body id="page-top" class="eupopup eupopup-bottomright">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Realtime Corona Virus</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Map</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#signup">COVID-19</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- About Section -->
+  <section id="about" class="about-section text-center">
+    <div class="global_cont">
+      <div class="container">
+        <div class="row">
+          <h2 class="text-white mb-4">Latest News COVID-19</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2">
+          <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=11&l=ur1&category=cucina&banner=0A4FMM28CZZMH1NB2KR2&f=ifr&linkID=4f12fd1e3e06dbeacef8955140712ef8&t=awsaffiliate-21&tracking_id=awsaffiliate-21" width="120" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;float:right;border-radius: 7px;" frameborder="0"></iframe>
+        </div>
+        <div class="col-sm-8"><iframe id="news_iframe" style="background-color: #363636; border-radius: 7px;" src="https://www.worldometers.info/coronavirus/#news" width="100%" height="600px" scrolling="no" frameborder="0"></iframe></div>
+        <div class="col-sm-2">
+          <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=11&l=ur1&category=cucina&banner=0A4FMM28CZZMH1NB2KR2&f=ifr&linkID=4f12fd1e3e06dbeacef8955140712ef8&t=awsaffiliate-21&tracking_id=awsaffiliate-21" width="120" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;float:left;border-radius: 7px;" frameborder="0"></iframe>
+        </div>
+    </div>
+    </div>
+  </section>
+
+<section id="projects" style="background-color: #363636;" class="projects-section text-center">
+  <div class="global_cont">
+      <div class="container">
+        <div class="row">
+          <h2 class="text-white mb-4">Latest Map COVID-19</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2">
+          <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=11&l=ur1&category=cucina&banner=0A4FMM28CZZMH1NB2KR2&f=ifr&linkID=4f12fd1e3e06dbeacef8955140712ef8&t=awsaffiliate-21&tracking_id=awsaffiliate-21" width="120" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;float:right;border-radius: 7px;" frameborder="0"></iframe>
+        </div>
+        <div class="col-sm-8">
+<iframe id="map_iframe" style="background-color: #363636; border-radius: 7px;" src="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" scrolling="no" width="100%" height="1000px" frameborder="0"></iframe>
+          </div>
+        <div class="col-sm-2">
+          <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=11&l=ur1&category=cucina&banner=0A4FMM28CZZMH1NB2KR2&f=ifr&linkID=4f12fd1e3e06dbeacef8955140712ef8&t=awsaffiliate-21&tracking_id=awsaffiliate-21" width="120" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;float:left;border-radius: 7px;" frameborder="0"></iframe>
+        </div>
+    </div>
+    </div>
+</section>
+
+  <!-- Signup Section -->
+  <section id="signup" class="about-section">
+    <div class="container">
+      <div class="row">
+        <h2 class="text-white mb-4">What's COVID-19 and how to behaved</h2>
+      </div>
+      <div class="row">
+          <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/mOV1aBVYKGA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-sm-1"></div>
+          
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact-section bg-black">
+    <div class="container">
+      <div class="row">
+        <h2 class="text-white mb-4">Disclamer</h2>
+      </div>
+      <div class="row">
+        <h5 class="text-white">News is served by worldometers.info</h5>
+      </div>
+      <div class="row">
+        <h5 class="text-white">Map is served by arcgis.com (Johns Hopkins CSSE)</h5></div>
+      <div class="row">
+        <h5 class="text-white">COVID-19 video content by World Health Organizzation</h5>
+      </div>
+      </div>
+    </div>
+    <div class="container">
+
+      <div class="social d-flex justify-content-center">
+        <a target="_blank" href="https://twitter.com/share?url=https://realtimecoronavirus.co&amp;text=Realtime%20CoronaVirus%20Dashboard&amp;hashtags=coronavirus" class="mx-2">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frealtimecoronavirus.co%2F&amp;src=sdkpreparse" class="mx-2">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://realtimecoronavirus.co" class="mx-2">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-black small text-center text-white-50">
+    <div class="container">
+      Realtime Corona Virus 2020
+    </div>
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Facebook SDK -->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v6.0"></script>
+
+
+  <!-- Custom scripts for this template -->
+  <script src="js/grayscale.min.js"></script>
+
 </body>
+
 </html>
