--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
 
+  <!-- hitwebcounter Code START -->
+  <a style="display: none" href="https://www.hitwebcounter.com" target="_blank">
+  <img src="https://hitwebcounter.com/counter/counter.php?page=7201960&style=0038&nbdigits=9&type=ip&initCount=0" title="User Stats" Alt="webcounterwebsite"   border="0" >
+  </a>     
+
 </body>
 
 </html>
