--- a/index.html
+++ b/index.html
@@ -105,7 +105,17 @@
       </div>
       <div class="row">
         <div class="col-sm-2">
-          <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=11&l=ur1&category=cucina&banner=0A4FMM28CZZMH1NB2KR2&f=ifr&linkID=4f12fd1e3e06dbeacef8955140712ef8&t=awsaffiliate-21&tracking_id=awsaffiliate-21" width="120" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;float:right;border-radius: 7px;" frameborder="0"></iframe>
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- banner verticale -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6433968404168116"
+     data-ad-slot="5349719124"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         </div>
         <div class="col-sm-8"><iframe id="news_iframe" style="background-color: #363636; border-radius: 7px;" src="https://www.worldometers.info/coronavirus/#news" width="100%" height="600px" scrolling="no" frameborder="0"></iframe></div>
         <div class="col-sm-2">
