--- a/index.html
+++ b/index.html
@@ -129,6 +129,19 @@
   <div class="global_cont">
       <div class="container">
         <div class="row">
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- banner orizzontale -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6433968404168116"
+     data-ad-slot="7264617783"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+        </div>
+        <div class="row">
           <h2 class="text-white mb-4">Latest Map COVID-19</h2>
         </div>
       </div>
