--- a/index.html
+++ b/index.html
@@ -122,25 +122,28 @@
           <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=11&l=ur1&category=cucina&banner=0A4FMM28CZZMH1NB2KR2&f=ifr&linkID=4f12fd1e3e06dbeacef8955140712ef8&t=awsaffiliate-21&tracking_id=awsaffiliate-21" width="120" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;float:left;border-radius: 7px;" frameborder="0"></iframe>
         </div>
     </div>
+    <div class="row">
+      <div class="col-sm-12">
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- banner orizzontale -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-6433968404168116"
+                 data-ad-slot="7264617783"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            <iframe style="border-radius: 7px;" src="https://rcm-eu.amazon-adsystem.com/e/cm?o=29&p=48&l=ez&f=ifr&linkID=07e94f2677d4c3c245d03baf0c393640&t=awsaffiliate-21&tracking_id=awsaffiliate-21" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+        </div>
+      </div>
     </div>
   </section>
 
 <section id="projects" style="background-color: #363636;" class="projects-section text-center">
   <div class="global_cont">
       <div class="container">
-        <div class="row">
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- banner orizzontale -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6433968404168116"
-     data-ad-slot="7264617783"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-        </div>
         <div class="row">
           <h2 class="text-white mb-4">Latest Map COVID-19</h2>
         </div>
